docker-mysql-kuali-coeus/Oracle_Aurora_For_DMSDemo.template
{
  "AWSTemplateFormatVersion": "2010-09-09", 
  "Description": "This CloudFormation sample template OracletoAurora_DMS creates Oracle and Aurora instances in a VPC which can be used to test the migration using AWS DMS service. You will be billed for the AWS resources used if you create a stack from this template", 
  "Mappings": {
    "OracleEngineVersion": {
      "ap-northeast-1": {
        "ver": "12.1.0.2.v4"
      }, 
      "ap-northeast-2": {
        "ver": "12.1.0.2.v4"
      }, 
      "ap-south-1": {
        "ver": "12.1.0.2.v4"
      }, 
      "ap-southeast-1": {
        "ver": "12.1.0.2.v4"
      }, 
      "ap-southeast-2": {
        "ver": "12.1.0.2.v4"
      }, 
      "eu-central-1": {
        "ver": "12.1.0.2.v4"
      }, 
      "eu-west-1": {
        "ver": "12.1.0.2.v4"
      }, 
      "sa-east-1": {
        "ver": "12.1.0.2.v4"
      }, 
      "us-east-1": {
        "ver": "12.1.0.2.v4"
      }, 
      "us-gov-west-1": {
        "ver": "12.1.0.2.v4"
      }, 
      "us-west-1": {
        "ver": "12.1.0.2.v4"
      }, 
      "us-west-2": {
        "ver": "12.1.0.2.v4"
      }
    }, 
    "OracleRDSInstanceType": {
      "ap-northeast-1": {
        "inst": "db.m3.medium"
      }, 
      "ap-northeast-2": {
        "inst": "db.t2.medium"
      }, 
      "ap-south-1": {
        "inst": "db.t2.medium"
      }, 
      "ap-southeast-1": {
        "inst": "db.m3.medium"
      }, 
      "ap-southeast-2": {
        "inst": "db.m3.medium"
      }, 
      "eu-central-1": {
        "inst": "db.m3.medium"
      }, 
      "eu-west-1": {
        "inst": "db.m3.medium"
      }, 
      "sa-east-1": {
        "inst": "db.m3.medium"
      }, 
      "us-east-1": {
        "inst": "db.m3.medium"
      }, 
      "us-gov-west-1": {
        "inst": "db.m3.medium"
      }, 
      "us-west-1": {
        "inst": "db.m3.medium"
      }, 
      "us-west-2": {
        "inst": "db.m3.medium"
      }
    }
  }, 
  "Metadata": {
    "AWS::CloudFormation::Interface": {
      "ParameterGroups": [
        {
          "Label": {
            "default": "Source Oracle Database Configuration"
          }, 
          "Parameters": [
            "OracleDBName", 
            "OracleDBUsername", 
            "OracleDBPassword"
          ]
        }, 
        {
           "Label": {
            "default": "Target Aurora Database Configuration"
           },
          "Parameters": [
            "AuroraDBUsername",
            "AuroraDBPassword"
          ]
        },
        {
          "Label": {
            "default": "Enter IP address for DB Security group Configuration"
          }, 
          "Parameters": [
            "ClientIP"
          ]
        }
      ]
    }
  }, 
  "Outputs": {
    "OracleJDBCConnectionString": {
      "Description": "JDBC connection string for Oracle database", 
      "Value": {
        "Fn::Join": [
          "", 
          [
            "jdbc:oracle:thin:@", 
            {
              "Fn::GetAtt": [
                "OracleDB", 
                "Endpoint.Address"
              ]
            }, 
            ":", 
            {
              "Fn::GetAtt": [
                "OracleDB", 
                "Endpoint.Port"
              ]
            }, 
            ":", 
            {
              "Ref": "OracleDBName"
            }
          ]
        ]
      }
    }, 
    "AuroraJDBCConnectionString": {
      "Description": "JDBC connection string for Aurora cluster",    
      "Value": {
        "Fn::Join": [
          "",
          [
            "jdbc:mysql://",
            {
              "Fn::GetAtt": [
                 "AuroraCluster",
                "Endpoint.Address"
              ]
             },
             ":",
             {
              "Fn::GetAtt": [
                 "AuroraCluster",
                "Endpoint.Port"
               ]
            }
          ]
        ]
      }
     },

    "Regionname": {
      "Value": {
        "Ref": "AWS::Region"
      }
    }, 
    "StackName": {
      "Value": {
        "Ref": "AWS::StackName"
      }
    }
  }, 
  "Parameters": {
    "ClientIP": {
      "AllowedPattern": "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})", 
      "ConstraintDescription": "It must be a valid IP CIDR range of the form x.x.x.x/x. Suggest to enable access to your IP address only. Pls get your address using checkip.amazonaws.com or whatsmyip.org.", 
      "Default": "0.0.0.0/0", 
      "Description": "The IP address range that can be used to connect to the RDS instances from your local machine.It must be a valid IP CIDR range of the form x.x.x.x/x.Pls get your address using checkip.amazonaws.com or whatsmyip.org", 
      "MaxLength": "18", 
      "MinLength": "9", 
      "Type": "String"
    }, 
    "OracleDBName": {
      "AllowedPattern": "[a-zA-Z][a-zA-Z0-9]*", 
      "ConstraintDescription": "must begin with a letter and contain a minimum of 4 alphanumeric characters.", 
      "Default": "ORCL", 
      "Description": "Enter Oracle Database name", 
      "MaxLength": "64", 
      "MinLength": "4", 
      "Type": "String"
    }, 
    "OracleDBPassword": {
      "AllowedPattern": "[a-zA-Z0-9]*", 
      "ConstraintDescription": "must contain only alphanumeric characters with minimum of 8 characters.", 
      "Default": "oraadmin123", 
      "Description": "Enter password for Oracle Admin user", 
      "MaxLength": "41", 
      "MinLength": "8", 
      "NoEcho": "true", 
      "Type": "String"
    }, 
    "OracleDBUsername": {
      "AllowedPattern": "[a-zA-Z][a-zA-Z0-9]*", 
      "ConstraintDescription": "must begin with a letter and contain a minimum of 4 alphanumeric characters.", 
      "Default": "oraadmin", 
      "Description": "Enter database Admin username for Oracle", 
      "MaxLength": "16", 
      "MinLength": "4", 
      "NoEcho": "false", 
      "Type": "String"
    },
   "AuroraDBUsername": {
      "AllowedPattern": "[a-zA-Z][a-zA-Z0-9]*", 
      "ConstraintDescription": "must begin with a letter and contain a minimum of 4 alphanumeric characters.", 
      "Default": "auradmin", 
      "Description": "Enter database Admin username for Aurora", 
      "MaxLength": "16", 
      "MinLength": "4", 
      "NoEcho": "false", 
      "Type": "String"
    },
    "AuroraDBPassword": {
      "AllowedPattern": "[a-zA-Z0-9]*", 
      "ConstraintDescription": "must contain only alphanumeric characters with minimum of 8 characters.", 
      "Default": "auradmin123", 
      "Description": "Enter password for Aurora Admin user", 
      "MaxLength": "41", 
      "MinLength": "8", 
      "NoEcho": "true", 
      "Type": "String"
    }
  }, 
  "Resources": {
    "AttachGateway": {
      "Metadata": {
        "AWS::CloudFormation::Designer": {
          "id": "15834a52-0246-4dd9-857a-b4df8be50521"
        }
      }, 
      "Properties": {
        "InternetGatewayId": {
          "Ref": "InternetGateway"
        }, 
        "VpcId": {
          "Ref": "VPC"
        }
      }, 
      "Type": "AWS::EC2::VPCGatewayAttachment"
    }, 
    "DBSubnet1": {
      "Metadata": {
        "AWS::CloudFormation::Designer": {
          "id": "e0cc036c-ecf2-45c2-99f9-db0e1c052ce6"
        }
      }, 
      "Properties": {
        "AvailabilityZone": {
          "Fn::Select": [
            "0", 
            {
              "Fn::GetAZs": ""
            }
          ]
        }, 
        "CidrBlock": "10.0.0.0/26", 
        "Tags": [
          {
            "Key": "Application", 
            "Value": {
              "Ref": "AWS::StackId"
            }
          }
        ], 
        "VpcId": {
          "Ref": "VPC"
        }
      }, 
      "Type": "AWS::EC2::Subnet"
    }, 
    "DBSubnet2": {
      "Metadata": {
        "AWS::CloudFormation::Designer": {
          "id": "fdd5b60f-e3fd-43e9-89c9-6838bca46a7c"
        }
      }, 
      "Properties": {
        "AvailabilityZone": {
          "Fn::Select": [
            "1", 
            {
              "Fn::GetAZs": ""
            }
          ]
        }, 
        "CidrBlock": "10.0.0.64/26", 
        "Tags": [
          {
            "Key": "Application", 
            "Value": {
              "Ref": "AWS::StackId"
            }
          }
        ], 
        "VpcId": {
          "Ref": "VPC"
        }
      }, 
      "Type": "AWS::EC2::Subnet"
    },     "InternetGateway": {
      "Metadata": {
        "AWS::CloudFormation::Designer": {
          "id": "1f19e454-02e1-4071-b8fa-ade277875b9f"
        }
      }, 
      "Properties": {
        "Tags": [
          {
            "Key": "Application", 
            "Value": {
              "Ref": "AWS::StackId"
            }
          }
        ]
      }, 
      "Type": "AWS::EC2::InternetGateway"
    }, 
    "MyDBSubnetGroup": {
      "Metadata": {
        "AWS::CloudFormation::Designer": {
          "id": "e0916f94-7fbf-430a-9f66-6e8fd6c7cdf9"
        }
      }, 
      "Properties": {
        "DBSubnetGroupDescription": "Subnet available for the Oracle Instance", 
        "SubnetIds": [
          {
            "Ref": "DBSubnet1"
          }, 
          {
            "Ref": "DBSubnet2"
          }
        ]
      }, 
      "Type": "AWS::RDS::DBSubnetGroup"
    }, 
    "OracleDB": {
      "Metadata": {
        "AWS::CloudFormation::Designer": {
          "id": "8c1b237b-b65f-4962-a2c6-b6f9f2c3e52c"
        }
      }, 
      "Properties": {
        "AllocatedStorage": "10", 
        "AvailabilityZone": {
          "Fn::GetAtt": [
            "DBSubnet1", 
            "AvailabilityZone"
          ]
        }, 
        "DBInstanceClass": {
          "Fn::FindInMap": [
            "OracleRDSInstanceType", 
            {
              "Ref": "AWS::Region"
            }, 
            "inst"
          ]
        }, 
        "DBName": {
          "Ref": "OracleDBName"
        }, 
        "DBSubnetGroupName": {
          "Ref": "MyDBSubnetGroup"
        }, 
        "Engine": "oracle-ee", 
        "EngineVersion": {
          "Fn::FindInMap": [
            "OracleEngineVersion", 
            {
              "Ref": "AWS::Region"
            }, 
            "ver"
          ]
        }, 
        "LicenseModel": "bring-your-own-license", 
        "MasterUserPassword": {
          "Ref": "OracleDBPassword"
        }, 
        "MasterUsername": {
          "Ref": "OracleDBUsername"
        }, 
        "MultiAZ": "false", 
        "PubliclyAccessible": "true", 
        "StorageType": "gp2", 
        "Tags": [
          {
            "Key": "Application", 
            "Value": {
              "Ref": "AWS::StackId"
            }
          }
        ],
        "VPCSecurityGroups": [
          {
            "Ref": "myVPCSecurityGroup"
          }
        ]

      }, 
      "Type": "AWS::RDS::DBInstance"
    }, 
    "AuroraCluster": { 
       "Properties": {
         "DBClusterParameterGroupName": "default.aurora-mysql5.7",
         "DBSubnetGroupName": {
           "Ref": "MyDBSubnetGroup"
         }, 
         "Engine": "aurora-mysql",
         "MasterUserPassword": {
           "Ref": "AuroraDBPassword"
         },
         "MasterUsername": {
           "Ref": "AuroraDBUsername"
         },
         "Tags": [
           {
             "Key": "Application",
             "Value": {
               "Ref": "AWS::StackId"
             }
           }
         ],
        "VpcSecurityGroupIds": [
          {
            "Ref": "myVPCSecurityGroup"
          }
        ]
       },
       "Type": "AWS::RDS::DBCluster"
     },
    "AuroraDBInstance1" : {
    "Type" : "AWS::RDS::DBInstance",
  "Properties" : {
      "DBSubnetGroupName" : {
        "Ref" : "MyDBSubnetGroup"
      },
      "DBParameterGroupName" : "default.aurora-mysql5.7",
      "Engine" : "aurora-mysql",
      "DBClusterIdentifier" : {
        "Ref" : "AuroraCluster"
      },
      "PubliclyAccessible" : "true",
        "AvailabilityZone": {
          "Fn::GetAtt": [
            "DBSubnet1", 
            "AvailabilityZone"
          ]
        }, 
      "DBInstanceClass" : "db.r3.xlarge"
    }
  },
    "AuroraDBInstance2" : {
   "Type" : "AWS::RDS::DBInstance",
   "Properties" : {
     "DBSubnetGroupName" : {
       "Ref" : "MyDBSubnetGroup"
     },
     "DBParameterGroupName" : "default.aurora-mysql5.7",
     "Engine" : "aurora-mysql",
     "DBClusterIdentifier" : {
       "Ref" : "AuroraCluster"
     },
     "PubliclyAccessible" : "true",
        "AvailabilityZone": {
          "Fn::GetAtt": [
            "DBSubnet1", 
            "AvailabilityZone"
          ]
        }, 
     "DBInstanceClass" : "db.r3.xlarge"
   }
  },
    "Route": {
      "DependsOn": "AttachGateway", 
      "Metadata": {
        "AWS::CloudFormation::Designer": {
          "id": "add6815b-d284-4d7d-b40e-64fc892cd22f"
        }
      }, 
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0", 
        "GatewayId": {
          "Ref": "InternetGateway"
        }, 
        "RouteTableId": {
          "Ref": "RouteTable"
        }
      }, 
      "Type": "AWS::EC2::Route"
    }, 
    "RouteTable": {
      "Metadata": {
        "AWS::CloudFormation::Designer": {
          "id": "3041328d-92e5-4421-b1b1-5d971f6d011d"
        }
      }, 
      "Properties": {
        "Tags": [
          {
            "Key": "Application", 
            "Value": {
              "Ref": "AWS::StackId"
            }
          }
        ], 
        "VpcId": {
          "Ref": "VPC"
        }
      }, 
      "Type": "AWS::EC2::RouteTable"
    }, 
    "SubnetRouteTableAssociation": {
      "Metadata": {
        "AWS::CloudFormation::Designer": {
          "id": "928e8656-070d-43dc-91af-4e0adeb7e3ee"
        }
      }, 
      "Properties": {
        "RouteTableId": {
          "Ref": "RouteTable"
        }, 
        "SubnetId": {
          "Ref": "DBSubnet1"
        }
      }, 
      "Type": "AWS::EC2::SubnetRouteTableAssociation"
    }, 
    "SubnetRouteTableAssociation1": {
      "Metadata": {
        "AWS::CloudFormation::Designer": {
          "id": "1f648c5d-9d86-49e5-910c-093a9b11e29e"
        }
      }, 
      "Properties": {
        "RouteTableId": {
          "Ref": "RouteTable"
        }, 
        "SubnetId": {
          "Ref": "DBSubnet1"
        }
      }, 
      "Type": "AWS::EC2::SubnetRouteTableAssociation"
    }, 
    "VPC": {
      "Metadata": {
        "AWS::CloudFormation::Designer": {
          "id": "54f8a300-8ba2-42b4-9085-1e8dc95457c7"
        }
      }, 
      "Properties": {
        "CidrBlock": "10.0.0.0/24", 
        "EnableDnsHostnames": "true", 
        "EnableDnsSupport": "true", 
        "Tags": [
          {
            "Key": "Application", 
            "Value": {
              "Ref": "AWS::StackId"
            }
          }, 
          {
            "Key": "Name", 
            "Value": {
              "Ref": "AWS::StackName"
            }
          }
        ]
      }, 
      "Type": "AWS::EC2::VPC"
    }, 
    "myVPCSecurityGroup": {
      "Metadata": {
        "AWS::CloudFormation::Designer": {
          "id": "a23267c6-ae40-4d4e-a1d6-fac5f866f1c0"
        }
      }, 
      "Properties": {
        "GroupDescription": "Security group for migration instances.", 
        "SecurityGroupIngress": [
          {
            "CidrIp": {
              "Ref": "ClientIP"
            }, 
            "FromPort": "3306", 
            "IpProtocol": "tcp", 
            "ToPort": "3306"
          }, 
          {
            "CidrIp": {
              "Ref": "ClientIP"
            }, 
            "FromPort": "1521", 
            "IpProtocol": "tcp", 
            "ToPort": "1521"
          }, 
          {
            "CidrIp": "10.0.0.0/24", 
            "FromPort": "1521", 
            "IpProtocol": "tcp", 
            "ToPort": "1521"
          }, 
          {
            "CidrIp": "10.0.0.0/24", 
            "FromPort": "3306", 
            "IpProtocol": "tcp", 
            "ToPort": "3306"
          }
        ], 
        "VpcId": {
          "Ref": "VPC"
        }
      }, 
      "Type": "AWS::EC2::SecurityGroup"
    }
  }
}
